welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: '(' expected but '{' found.
  if {(hour<7) || (hour>20) return talking}} 
     ^parotTrouble:2: error: illegal start of simple expression
  if {(hour<7) || (hour>20) return talking}} 
                                           ^